--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -41,8 +41,19 @@
         </td>
       </tr>
       <!-- Fins aquí -->
+	  <tr>
+        <td>
+          <a href="tranformers/tranformers.html">
+            <h2>tranformers</h2>
+          </a>
+        </td>
+        <td>
+          <strong>50</strong>
+        </td>
+      </tr>
     </table>
     <div>
+	
 </body>
 
 </html>
